# synapse

./: .dockerignore  .env.example  .gitignore  .lycheeignore  2025_CONTENT_STRATEGY_FRAMEWORK.md  ARCHITECTURAL_REFACTORING_PLAN.md  AUTHENTICATION_TEST_SUITE_SUMMARY.md  AUTONOMOUS_AI_PLATFORM_RESEARCH_PLAN.md  CHANGELOG.md  CICD_DEPLOYMENT_READY.md  CLAUDE.md  COMPREHENSIVE_INSIGHTS_REPORT.md  COMPREHENSIVE_STRATEGIC_AUDIT_AND_CONSOLIDATION_PLAN.md  COMPREHENSIVE_SYSTEM_AUDIT_AND_TESTING_STRATEGY.md  CONTENT_FORMAT_TEMPLATES.md  CONTENT_PRODUCTION_WORKFLOW.md  CONTENT_STRATEGY_IMPLEMENTATION_GUIDE.md  CONTENT_STRATEGY_PLATFORM_COMPLETE.md  CONTENT_TEMPLATES_INDEX.md  CONTRIBUTING.md  DATABASE_MIGRATION_STATUS.md  DISCORD_COMMUNITY_SETUP.md  DOCUMENTATION_SPRINT_COMPLETION_SUMMARY.md  DOCUMENTATION_VALIDATION_SUMMARY.md  Dockerfile  EPIC10_DATABASE_CONSOLIDATION_ANALYSIS.md  EPIC16_MIGRATION_PLAN.md  EPIC20_PHASE2_COMPLETION_REPORT.md  EPIC_2_PRODUCTION_READINESS_ASSESSMENT.md  EPIC_2_VECTOR_OPTIMIZATION_COMPLETION.md  EPIC_3_COMPLETION_SUMMARY.md  EPIC_4_COMPLETION_SUMMARY.md  EPIC_6_WEEK_2_DEPLOYMENT_REPORT.md  EPIC_9_3_IMPLEMENTATION_SUMMARY.md  EXECUTION_PLAN_DAYS_2_5.md  GEMINI_MARKET_VALIDATION_RESULTS.md  HOMEBREW_INSTALLATION.md  IDEA_MAPPING_IMPLEMENTATION_ROADMAP.md  KNOWLEDGE_BASE_EXTRACTION_ANALYSIS.md  LAUNCH_ASSETS_PACKAGE.md  (+105 more)
techlead-autopilot/: .dockerignore  CLAUDE.md  COMPREHENSIVE_AUDIT_REPORT.md  DEV_README.md  Dockerfile  Makefile  PHASE_2_DAY_2_PLAN.md  README.md  STRATEGIC_ROADMAP.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest_simple.ini  run_tests.py
techlead-autopilot/.github/workflows/: ci.yml
techlead-autopilot/docs/: 01_product_vision.md  02_market_analysis.md  03_mvp_specification.md  04_technical_architecture.md  05_revenue_model.md  06_go_to_market.md  07_customer_success.md  08_competitive_analysis.md  09_financial_projections.md  10_risk_assessment.md  11_development_roadmap.md  12_legal_compliance.md  DEPLOYMENT.md  PHASE_2_IMPLEMENTATION_PLAN.md  PLAN.md  PROMPT.md  SECURITY.md
techlead-autopilot/frontend/: package-lock.json  package.json
techlead-autopilot/frontend/public/: manifest.json  offline.html  sw.js
techlead-autopilot/frontend/src/: middleware.ts
techlead-autopilot/frontend/src/app/: globals.css  layout.tsx  page.tsx
techlead-autopilot/frontend/src/app/dashboard/: page.tsx
techlead-autopilot/frontend/src/app/help/: page.tsx
techlead-autopilot/frontend/src/app/login/: page.tsx
techlead-autopilot/frontend/src/app/register/: page.tsx
techlead-autopilot/frontend/src/components/analytics/: analytics-cards.tsx  content-to-lead-attribution-chart.tsx  content-type-performance-chart.tsx  engagement-trends-chart.tsx
techlead-autopilot/frontend/src/components/content/: content-generation-form.tsx  content-list.tsx  content-type-selector.tsx
techlead-autopilot/frontend/src/components/help/: faq-section.tsx  help-center.tsx  help-widget.tsx
techlead-autopilot/frontend/src/components/layout/: breadcrumb-navigation.tsx  dashboard-layout.tsx  keyboard-shortcuts.tsx  mobile-bottom-navigation.tsx  sidebar-navigation.tsx  universal-search.tsx
techlead-autopilot/frontend/src/components/leads/: lead-activity-timeline.tsx  lead-conversion-tracker.tsx  lead-list.tsx  lead-notes-communication.tsx  lead-scoring-visualization.tsx
techlead-autopilot/frontend/src/components/mobile/: mobile-content-approval.tsx  mobile-lead-management.tsx
techlead-autopilot/frontend/src/components/onboarding/: achievement-system.tsx  contextual-tips.tsx  onboarding-dashboard.tsx  product-tour.tsx  sample-data-generator.tsx  welcome-checklist.tsx
techlead-autopilot/frontend/src/components/providers/: performance-provider.tsx  pwa-provider.tsx  query-provider.tsx  session-provider.tsx
techlead-autopilot/frontend/src/components/pwa/: pwa-install-banner.tsx
techlead-autopilot/frontend/src/components/settings/: tips-preferences.tsx
techlead-autopilot/frontend/src/components/ui/: feature-tooltip.tsx  guidance-overlay.tsx  loading-states.tsx  tooltip-provider.tsx
techlead-autopilot/frontend/src/hooks/: use-contextual-tips.ts  use-pwa.ts
techlead-autopilot/frontend/src/types/: next-auth.d.ts
techlead-autopilot/migrations/: env.py
techlead-autopilot/migrations/versions/: 20241222_1200_001_initial_database_schema.py
techlead-autopilot/scripts/: dev.sh  init_db.py
techlead-autopilot/src/techlead_autopilot/: __init__.py
techlead-autopilot/src/techlead_autopilot/api/: __init__.py  main.py
techlead-autopilot/src/techlead_autopilot/api/auth/: __init__.py  dependencies.py  jwt.py  password.py
techlead-autopilot/src/techlead_autopilot/api/middleware/: __init__.py  auth.py  error_handling.py  logging.py  rate_limiting.py  security.py
techlead-autopilot/src/techlead_autopilot/api/routers/: __init__.py  auth.py  content.py  health.py  integrations.py  jobs.py  leads.py  organizations.py  scheduler.py
techlead-autopilot/src/techlead_autopilot/config/: __init__.py  settings.py
techlead-autopilot/src/techlead_autopilot/core/content_generation/: __init__.py  content_engine.py  content_templates.py  technical_knowledge.py
techlead-autopilot/src/techlead_autopilot/core/lead_detection/: __init__.py  lead_detector.py  lead_scorer.py
techlead-autopilot/src/techlead_autopilot/infrastructure/: logging.py  monitoring.py
techlead-autopilot/src/techlead_autopilot/infrastructure/database/: __init__.py  models.py  session.py
techlead-autopilot/src/techlead_autopilot/infrastructure/documentation/: __init__.py  auth_flows.py  examples.py  (+2 more)
techlead-autopilot/src/techlead_autopilot/services/: __init__.py  content_service.py  lead_service.py  linkedin_service.py  scheduler_service.py
techlead-autopilot/tests/: __init__.py  conftest_simple.py  test_api_auth.py  test_api_content.py  test_api_leads.py  test_complete_business_workflow.py  test_core_business_logic.py  test_core_business_logic_simple.py  test_integration.py  test_services.py  test_simple.py
techlead-autopilot/tests/integration/: test_linkedin_integration.py
(+991 files in other folders)
