[project]
name = "graph-rag-mcp"
version = "0.1.0"
description = "Graph-based RAG implementation with Memgraph"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["rag", "graph", "memgraph", "fastapi"]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "pydantic-settings",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "nltk>=3.8.1",
    "pymgclient>=1.3.0",
    "httpx>=0.25.1",
    "sentence-transformers",
    "aiofiles",
    "loguru>=0.7.3",
    "httpcore>=1.0.0",
    "python-dateutil>=2.8.2",
    "faiss-cpu>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock",
    "ruff>=0.1.6",
    "spacy>=3.0.0",
    "neo4j>=5.13.0",
    "openai>=1.0.0",
    "gqlalchemy",
    "pyopenssl",
]

[project.scripts]
synapse = "graph_rag.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_rag"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["pymgclient", "graphrag"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501", # line length handled by formatter
  "B008", # FastAPI Depends in default args
  "B904", # raise in except
  "PLR0913", "PLR0912", "PLR0915", # complexity
  "E741", # ambiguous names in tests/legacy
  "PLW2901", # loop var overwrite
  "PLR2004", # magic numbers
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=graph_rag --cov-report=term-missing"
markers = [
    "integration: mark test as integration test",
]

[tool.coverage.run]
source = ["graph_rag"]
omit = [
    "tests/*",
    "graph_rag/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
