[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-graph-rag"
version = "0.1.0"
description = "Graph-augmented Retrieval and synthesis with Memgraph, FastAPI, Typer CLI"
readme = "README.md"
authors = [{ name = "Neoforge", email = "opensource@neoforge.dev" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109",
  "uvicorn[standard]>=0.23",
  "httpx>=0.24",
  "typer>=0.9",
  "pydantic>=2.6",
  "prometheus-client>=0.16",
  "numpy>=1.24",
  "scikit-learn>=1.2",
]
keywords = ["rag", "graph", "memgraph", "faiss", "notion", "mcp"]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
llm = ["sentence-transformers>=2.2"]
mcp = ["mcp>=0.0.8"]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.7",
  "build>=1.0",
  "nltk>=3.8",
]

[project.scripts]
synapse = "graph_rag.cli.main:main"

[tool.setuptools]
license-files = []

[tool.ruff]
line-length = 100
